--- a/CoworkingWebApi/appsettings.json
+++ b/CoworkingWebApi/appsettings.json
@@ -7,4 +7,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DevConnection": "Server =DESKTOP-H2PC63Q; Database=CoworkingDb; Trusted_Connection=True; MultipleActiveResultSets=True;"
+  }
 }
