--- a/CoworkingWebApi/appsettings.json
+++ b/CoworkingWebApi/appsettings.json
@@ -6,7 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "AshProgHelpSecretKey",
+    "Issuer":"ashproghelp.com"
+  },
   "ConnectionStrings": {
     "DevConnection": "Server =DESKTOP-H2PC63Q; Database=CoworkingDb; Trusted_Connection=True; MultipleActiveResultSets=True;"
   }
