--- a/CoworkingWebApi/appsettings.json
+++ b/CoworkingWebApi/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "AshProgHelpSecretKey",
-    "Issuer":"ashproghelp.com"
+    "Key": "MySecretKey1234567",
+    "Issuer": "Admin1234567"
   },
   "ConnectionStrings": {
     "DevConnection": "Server =DESKTOP-H2PC63Q; Database=CoworkingDb; Trusted_Connection=True; MultipleActiveResultSets=True;"
