--- a/coworkingapp/package.json
+++ b/coworkingapp/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "axios": "^0.21.1",
+    "image-to-base64": "^2.1.1",
+    "input-moment": "^0.4.0",
+    "mdbreact": "^5.0.1",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "rc-datetime-picker": "^1.6.1",
     "react": "^17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-datetime-picker": "^3.2.0",
     "react-dom": "^17.0.1",
+    "react-moment-input": "^0.2.31",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.8",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
